--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_svg: ^1.1.0 # it help us to use SVG in our app
+  fbutton: ^2.0.1
+  flat_3d_button: ^1.0.3
+  firebase_auth: ^4.2.9
+  google_fonts: ^4.0.3
+  firebase_dart: ^1.0.11
+  firebase_core: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +53,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-  #   - images/a_dot_ham.jpeg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
